--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,4 +1,4 @@
-name: lint-and-test
+name: lint
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
   pull_request:
 
 jobs:
-  lint-test:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -15,8 +15,6 @@ jobs:
           go-version: '1.22'
       - name: go fmt
         run: test -z "$(gofmt -l .)"
-      - name: go test
-        run: go test ./... -cover
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
