--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,37 +6,44 @@ run:
 linters:
   default: none
   enable:
-    - errcheck
-    - staticcheck
+    # Baseline
     - govet
-    - ineffassign
-    - unused
-    - bodyclose
-    - dogsled
-    - dupl
-    - exhaustive
-    - gochecknoinits
-    - gocritic
-    - godot
+    - staticcheck
+    - errcheck
     - gosec
-    - misspell
+    - unused
+    - revive
+    - cyclop
+    - gocritic
+    # Optional — error handling
+    - nilerr
+    - errorlint
+    # Optional — context
     - noctx
+    - contextcheck
+    # Optional — code quality
+    - bodyclose
+    - dupl
+    - dupword
+    - makezero
     - nolintlint
-    - prealloc
-    - unconvert
-    - unparam
-    - whitespace
+    # Optional — performance
+    - perfsprint
   settings:
     gosec:
       excludes:
-        - G404   # Use of weak random number generator — acceptable in non-security code
+        - G404   # weak PRNG acceptable for non-security token generation
     gocritic:
       enabled-tags:
         - diagnostic
         - style
-        - performance
-    exhaustive:
-      default-signifies-exhaustive: true
+    cyclop:
+      max-complexity: 15
+    revive:
+      rules:
+        - name: exported
+          arguments:
+            - disableStutteringCheck
 
 formatters:
   enable:
